--- a/templates/common/index.html
+++ b/templates/common/index.html
@@ -139,10 +139,31 @@
         </div>
     </div>
     <h2 class="title">Extra Features</h2>
-    <div class="row"><p>
-        1.<br>
-        2.<br>
-    </p></div>
+    <div style="text-align: center;">
+        ADMIN
+        <ul>
+            <li>1. The admin can access the details of each student from here and/or can download the list of all students in an excel format
+            </li>
+            <li>2. The admin can add a new student</li>
+            <li>3. The admin can upload an excel sheet consisting of all student details</li>
+            <li>4. The admin can add a new subject</li>
+            <li>5. In case of addition of a new department in the college, the admin can add the details of the new department</li>
+        </ul><br><br>
+
+        STUDENT
+        <ul>
+            <li>1. The students can apply for electives of their choice from the list of available electives. </li>
+            <li>2. The students can request to change their elective from one subject to another</li>
+        </ul><br><br>
+
+        TEACHER
+        <ul>
+            <li>1. The teacher can see the list of all students.</li>
+            <li>2. The student details can be downloaded in excel format</li>
+            <li>3. The teacher can see the details of students who request to change the elective.</li>
+            <li>4. The teacher may choose to approve or reject the request.</li>
+        </ul>
+    </div>
     
     <footer>
         <div class="footer">
