--- a/templates/subject/single-subject.html
+++ b/templates/subject/single-subject.html
@@ -14,7 +14,7 @@
                 <h1>{{subject.name}}</h1>
                 <h4><b>Taught by : </b>{{subject.teacher.name}}</h4>
                 <h5>{{subject.teacher.post}}</h5>
-                <h5>{{subject.intro}}</h5>
+                <!-- <h5>{{subject.intro}}</h5> -->
                 <br> 
                 <h3>Subject details &#8594;</h3>
                 <br>
