--- a/templates/common/index.html
+++ b/templates/common/index.html
@@ -192,6 +192,9 @@
                     </div>
                 </div>
                 <hr>
+                <center>
+                    <p>All Rights Reserved © Team Alpha</p>
+                </center>
             </div>
         </div>
     </footer>
