--- a/templates/subject/admin-single-subject.html
+++ b/templates/subject/admin-single-subject.html
@@ -6,7 +6,8 @@
     <div class="smallcon singlepro">
         <div class="row">
             <div class="col-2">
-                <div class="video"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/inWWhr5tnEA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="video">
+                    <iframe width="560" height="315" src="{{subject.intro}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="col-2">
@@ -17,8 +18,8 @@
                 <h3>Subject details &#8594;</h3>
                 <br>
                 <p>{{subject.desc}}<br></p>
-                <br> 
-                <a href="{{subject.syllabus}}" target="_blank" class="btn">Syllabus link</a>
+                <br>
+                <a href="{{subject.syllabus}}" target="_blank" class="btn">View Subject Syllabus</a>
             </div>
         </div>
     </div>
