--- a/templates/dashboard/student.html
+++ b/templates/dashboard/student.html
@@ -73,9 +73,9 @@
         {% for req in change_requests %}
         <div class="col5">
             <div class="col6"><h2>{{req.from_sub.name}}</h2><br>
-                <div><img src="{{req.from_sub.cover_img.url}}" style="width: 100px; height: 100px;"></div>
-                <h4><b>Taught by: </b>{{req.from_sub.teacher.name}}</h4> <!--can be  a link to the faculty profile-->
-                <h4>{{req.from_sub.teacher.department.name}}</h4>
+                <img src="{{req.to_sub.cover_img.url}}" style="width: 100px; height: 100px;">
+                <h4><b>Taught by: </b>{{req.to_sub.teacher.name}}</h4> <!--can be  a link to the faculty profile-->
+                <h4>{{req.to_sub.teacher.department.name}}</h4>
             </div>
             <!-- <img src="{% static 'images/pending.png' %}" style="width: 30px; height: 30px;"></div> -->
             <div class="col6">
