--- a/templates/subject/single-subject.html
+++ b/templates/subject/single-subject.html
@@ -5,29 +5,22 @@
 
     <div class="smallcon singlepro">
         <div class="row">
-            
             <div class="col-2">
-                <div class="video"><iframe width="100%" height="100%" src="{{subject.intro}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="video">
+                    <iframe width="560" height="315" src="{{subject.intro}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="col-2">
                 <h1>{{subject.name}}</h1>
                 <h4><b>Taught by : </b>{{subject.teacher.name}}</h4>
                 <h5>{{subject.teacher.post}}</h5>
-                <!-- <h5>{{subject.intro}}</h5> -->
                 <br> 
                 <h3>Subject details &#8594;</h3>
                 <br>
                 <p>{{subject.desc}}<br></p>
-                <br> 
-
-                <a href="{{subject.syllabus}}" target="_blank" class="btn">Syllabus link</a>
-                <a href="{% url 'enroll' subject.id %}" class="btn8">Enroll Now</a>
+                <br>
+                <a href="{{subject.syllabus}}" target="_blank" class="btn">View Subject Syllabus</a>
             </div>
-            
-    
-           
         </div>
-        
     </div>
 {% endblock content %}
